[gd_scene load_steps=8 format=3 uid="uid://bs60ehaxylsw"]

[ext_resource type="Texture2D" uid="uid://c5r1uxtp0wfg5" path="res://tudo/imagens/personagens/Zezinho.jpg" id="2_42m5y"]
[ext_resource type="Texture2D" uid="uid://bp8ma4dqka1s1" path="res://tudo/Botoes/botao.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cw4bqmy8mkmgt" path="res://tudo/Botoes/botaoAoClicar.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dyac54buuv0pk" path="res://tudo/Botoes/BotaoClique.png" id="5"]
[ext_resource type="Script" path="res://script/DICA.gd" id="6"]
[ext_resource type="FontFile" uid="uid://chye5x60sbhrh" path="res://tudo/fonts/BRITANIC.TTF" id="6_kepbp"]
[ext_resource type="Texture2D" uid="uid://d1oiia7kdqle1" path="res://tudo/Botoes/caixaTexto.png" id="7_l01bs"]

[node name="DICA" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(172, 52)
scale = Vector2(0.5, 0.52)
texture = ExtResource("2_42m5y")
offset = Vector2(0, 520.197)

[node name="botao1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 10.0
offset_right = 418.0
offset_bottom = 88.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("5")

[node name="Label" type="Label" parent="botao1"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 217.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("6_kepbp")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="botao2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 11.0
offset_right = 260.0
offset_bottom = 89.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("5")

[node name="Label" type="Label" parent="botao2"]
layout_mode = 0
offset_left = 5.0
offset_top = 13.0
offset_right = 217.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("6_kepbp")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(175.5, 306)
scale = Vector2(0.543056, 0.55625)
texture = ExtResource("7_l01bs")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 453.0
offset_right = 311.0
offset_bottom = 624.0
theme_override_font_sizes/font_size = 10
text = "bgfvgsvsvfvsyvyrs"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[connection signal="pressed" from="botao1" to="." method="_on_botao1_pressed"]
[connection signal="pressed" from="botao2" to="." method="_on_botao2_pressed"]
